--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,16 +1,15 @@
-fastapi
-uvicorn
-opencv-python
+fastapi==0.104.1
+uvicorn==0.24.0
+opencv-python==4.11.0.86
+opencv-contrib-python==4.11.0.86
 numpy==1.26.4
-websockets
-opencv-contrib-python
-pygame
-keras
-pillow
-tensorflow
-ultralytics
-pyserial
-kociemba
-scipy
+websockets==12.0
+pygame==2.6.1
+keras==3.9.2
+pillow==11.0.0
+tensorflow==2.19.0
+ultralytics==8.3.128
+pyserial==3.5
+kociemba==1.2.1
+scipy==1.10.1
 webcolors
-ultralytics
